* Changelog

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.18...dev][Unreleased]]

*** Added
+ *tetragono*: Add a new command =gm_hamiltonian= to replace the Hamiltonian of the existent sampling lattice.
*** Changed
+ *lazy*: Using a manual stack to run the recursion now, to avoid the recursion depth limit.
*** Deprecated
*** Removed
*** Fixed
+ *tetragono*: Fix a problem when calling =gm_data_load= in tetragono shell.
+ *tetragono*: Fix a bug in calculating the natural gradient of a complex tensor network state.
+ *tetragono*: Fix a bug in calculating the expect and the deviation in the ergodic sampling with subspace restricted.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.17...v0.2.18][v0.2.18]] - 2022-06-28

*** Added
+ *tetragono*: Add compatibility support for python3.8.
+ *tetragono*: Add =ex_create= command for tetragono shell, which calls =abstract_state= to create an =exact_lattice=.
+ *tetragono*: Add the multiple product state, which is the supertype of the string bond state and the convolutional
  neural network state, and add its high-level API in tetragono.shell.
*** Changed
+ *tetragono*: The function name to create a lattice changes from =create= to =abstract_lattice=. And it is recommended
  to split it into two parts: =abstract_state= to create an abstract state and =abstract_lattice= to convert the
  abstract state into an abstract lattice.
+ *tetragono*: The epsilon to avoid the singularity of the metric in the natural gradient method is relative now.
*** Deprecated
+ *tetragono*: The original function name =create= to create lattice is deprecated.

** [[https://github.com/hzhangxyz/TAT/compare/v0.2.13...v0.2.17][v0.2.17]] - 2022-06-12

*** Added
+ *tetragono*: Add support for changing the hamiltonian of an existent sampling lattice. To do it, create a lattice with
  target hamiltonians and then call =gm_data_load(file_name)= to replace tensors with data stored in file =file_name=.